# Alpha_research_A_share

./: .gitignore  LICENSE  README.md  ~$研究项目规划.docx  量化研究项目规划.docx
a_share_Multi-factor_Stock_Selection_and_Portfolio_Backtesting_System/: README.md  pyproject.toml
a_share_Multi-factor_Stock_Selection_and_Portfolio_Backtesting_System/configs/: default.yaml
a_share_Multi-factor_Stock_Selection_and_Portfolio_Backtesting_System/examples/: quickstart.py  run_demo.py
a_share_Multi-factor_Stock_Selection_and_Portfolio_Backtesting_System/outputs/: equity_curve.csv  metrics.csv  rebalance_weights.csv  turnover.csv
a_share_Multi-factor_Stock_Selection_and_Portfolio_Backtesting_System/tests/: test_metrics.py  test_pipeline.py
a_share_quant/: README.md  outputs_recommended_config.md  outputs_sensitivity_summary.csv  pyproject.toml
a_share_quant/data/: hs300_constituents.csv
a_share_quant/examples/: aggregate_sensitivity.py  eval_selected_on_test.py  fetch_hs300_universe.py  run_hs300_demo.py  run_sensitivity_train_val.py  run_walk_forward_hs300.py
a_share_quant/outputs_after_fix/: benchmark_curve.csv  concentration.csv  equity_curve.csv  excess_returns.csv  factor_ic_summary.csv  metrics.csv  rebalance_weights.csv  score_quantile_returns.csv  size_exposure.csv  trade_log.csv  turnover.csv
a_share_quant/outputs_hs300/: equity_curve.csv  metrics.csv  rebalance_weights.csv  turnover.csv
a_share_quant/outputs_hs300_real/: metrics.csv
a_share_quant/outputs_hs300_real_rerun/: rebalance_weights.csv
a_share_quant/outputs_hs300_real_sample/: equity_curve.csv  (+3 more)
(+680 files in other folders)
