[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ashare-quant"
version = "0.1.0"
description = "A modular A-share multi-factor research and backtesting package."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
]

[project.optional-dependencies]
data = ["akshare"]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
